# electrify-app

./: .gitignore  Dockerfile  pyproject.toml  readme.md  requirements-dev.txt
.github/workflows/: pylint.yml  python-tests.yml
app/: calculations.py  constants.py  main.py  models.py
app/api/: component_savings_endpoints.py  heating.py  (+3 more)
doc/: mean_of_modelled.tex
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_5f5a17c013354698___init___py.html  z_5f5a17c013354698_constants_py.html  z_5f5a17c013354698_main_py.html  z_6c0e4b930745278b___init___py.html  z_6c0e4b930745278b_energy_plans_py.html  z_6c0e4b930745278b_response_models_py.html  z_6c0e4b930745278b_usage_profiles_py.html  z_6c0e4b930745278b_user_answers_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_test_api_py.html  z_a44f0ac069e85531_test_configuration_py.html  z_a44f0ac069e85531_test_cost_calculator_py.html  z_a44f0ac069e85531_test_energy_calculator_py.html  z_a44f0ac069e85531_test_main_py.html  z_c318f3fa19a49f69___init___py.html  z_c318f3fa19a49f69_configuration_py.html  z_c318f3fa19a49f69_cost_calculator_py.html  z_c318f3fa19a49f69_energy_calculator_py.html  z_c318f3fa19a49f69_get_climate_zone_py.html  z_c318f3fa19a49f69_get_energy_plans_py.html  z_cfb6adc3f81c8e3c___init___py.html  z_cfb6adc3f81c8e3c_component_savings_endpoints_py.html  z_cfb6adc3f81c8e3c_household_savings_endpoint_py.html
scripts/: cost_calculations.py  default_household.py  generate_lookup.py  run_heating_analysis.py
tests/: test_api.py  test_configuration.py  test_main.py
(+21 files in other folders)
