[build-system]
requires = ["setuptools>=61.0.0", "wheel"]  # Ensure setuptools is at a sufficient version
build-backend = "setuptools.build_meta"

[project]
name = "electrify_app"
version = "0.1.0"
description = "A web API for household energy cost estimates"
authors = [{ name = "EECA", email = "DataAndAnalytics@eeca.govt.nz" }]
dependencies = [
    "fastapi",
    "pydantic",
    "uvicorn",
    "pytest",  # Note: Typically, test dependencies are not included in the main dependencies
    "requests",
    "httpx"
]
scripts = {"electrify_app" = "app.main:run"}
